com_html5flippingbook/site/assets/css/double-page.css
/* Basic sample */
/* make html books look seek */
@import url(https://fonts.googleapis.com/css?family=Nova+Slim);

.flipbook-viewport{
	overflow:hidden;
	width:100%;
	height:100%;
    margin: 0px auto;
}

.flipbook-viewport .page img{
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	margin:0;
}

.flipbook .loader{
    text-align: center;
    top: 45%;
    position: absolute;
    width: 100%;
    font-size: 20px;
}
.flipbook-viewport:not(.hardcover) .shadow{
	-webkit-transition: -webkit-box-shadow 0.5s;
	-moz-transition: -moz-box-shadow 0.5s;
	-o-transition: -webkit-box-shadow 0.5s;
	-ms-transition: -ms-box-shadow 0.5s;

	-webkit-box-shadow:0 0 20px #000;
	-moz-box-shadow:0 0 20px #000;
	-o-box-shadow:0 0 20px #000;
	-ms-box-shadow:0 0 20px #000;
	box-shadow:0 0 20px #000;
}
.depth{
    background-image: url('../pics/pages-depth.png');
    display: block;
    content: '';
    width: 16px;
    height: 100%;
    position: absolute;
    background-size: 200% 100%;
    padding: 0px 0px;
}
.depth-left {
    left: 100%;
    background-position: 100% 0px;
}
.depth-right {
    width: 0px;
    right: 100%;
    background-position: 0% 0px;
}

.flipbook{
    font-family: 'Nova Slim';
	font-size: 19.1px;
}

.flipbook .html-content{
    font-size: 1em!important;
}

.flipbook .html-content h1{
    font-size: 2em;
    line-height: 2em;
}

.flipbook .html-content h2{
    font-size: 1.7em;
    line-height: 2em;
    letter-spacing: 0.05em;
    font-weight: 400;
}

.flipbook .html-content blockquote{
    color:#586078;
    margin:10px 0;
    font-style:italic;
    font-size: 1em!important;
    line-height: normal;
}

.flipbook .html-content blockquote:before{
    content: "\201C";
    color:#333D53;
    font-size:1em;
}

.flipbook .html-content blockquote:after{
    content: "\201D";
    color:#333D53;
    font-size:1em;
}

.flipbook .html-content cite{
    font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size:13px;
    font-weight:200;
    font-style:normal;
    color:#666;
}

.flipbook .html-content .center-pic{
    margin:0;
    text-indent:0;
    text-align:center;
}

.flipbook .html-content .left-pic{
    float:left;
    margin-top:15px;
    margin-right:15px;
    margin-bottom:15px;
}

.flipbook .html-content .even{
    background:-webkit-gradient(linear, left top, right top, color-stop(0.95, #fff), color-stop(1, #dadada));
    background-image:-webkit-linear-gradient(left, #fff 95%, #dadada 100%);
    background-image:-moz-linear-gradient(left, #fff 95%, #dadada 100%);
    background-image:-ms-linear-gradient(left, #fff 95%, #dadada 100%);
    background-image:-o-linear-gradient(left, #fff 95%, #dadada 100%);
    background-image:linear-gradient(left, #fff 95%, #dadada 100%);
}

.flipbook .html-content .odd{
    background:-webkit-gradient(linear, right top, left top, color-stop(0.95, #fff), color-stop(1, #cacaca));
    background-image:-webkit-linear-gradient(right, #fff 95%, #cacaca 100%);
    background-image:-moz-linear-gradient(right, #fff 95%, #cacaca 100%);
    background-image:-ms-linear-gradient(right, #fff 95%, #cacaca 100%);
    background-image:-o-linear-gradient(right, #fff 95%, #cacaca 100%);
    background-image:linear-gradient(right, #fff 95%, #cacaca 100%);
}

.flipbook .html-content .even .gradient{
    position:absolute;
    top:0;
    left:0;
    width:380px;
    height:100%;
    background:-webkit-gradient(linear, left top, right top, color-stop(0.95, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0.2)));
    background-image:-webkit-linear-gradient(left,rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
    background-image:-moz-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
    background-image:-ms-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
    background-image:-o-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
    background-image:linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
}

.flipbook .html-content .odd .gradient{
    position:absolute;
    top:0;
    left:0;
    height:100%;
    background:-webkit-gradient(linear, right top, left top, color-stop(0.95, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0.15)));
    background-image:-webkit-linear-gradient(right,rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
    background-image:-moz-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
    background-image:-ms-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
    background-image:-o-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
    background-image:linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
}

